--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -4,7 +4,49 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index",
+    "server:webpack-dev": "webpack serve --mode development",
+    "start:dev": "nodemon server/index --ignore ./server/public",
+    "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.17.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
+    "ignore-styles": "^5.0.1",
+    "@babel/core": "^7.17.5",
+    "@babel/register": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.17.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^9.2.0",
+    "css-loader": "^6.7.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "image-minimizer-webpack-plugin": "^3.2.3",
+    "imagemin-optipng": "^8.0.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "nodemon": "^2.0.15",
+    "react-refresh": "^0.11.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-hot-middleware": "^2.25.1",
+    "webpack-manifest-plugin": "^4.1.1",
+    "webpack-merge": "^5.8.0"
   },
   "author": "",
   "license": "ISC"
