--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/index",
     "server:webpack-dev": "webpack serve --mode development",
-    "start:dev": "nodemon server/index --ignore ./server/public",
+    "start:dev": "nodemon server/index --ignore ./server/public --ignore ./frontend",
     "build": "webpack --mode production"
   },
   "dependencies": {
